<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_3"
        android:paddingTop="@dimen/spacing_3"
        >

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="@dimen/home_drawer_image_size"
            android:layout_height="@dimen/home_drawer_image_size"
            android:src="@color/button_ripple"
            />

        <TextView
            android:id="@+id/displayNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_2"
            android:gravity="center_horizontal"
            android:text="@string/home_drawer_displayname"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_drawer_divider_size"
        android:background="@color/divider_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="@dimen/spacing_3"
        tools:ignore="UseCompoundDrawables"
        >

        <ImageView
            android:layout_width="@dimen/home_drawer_menuitem_icon_size"
            android:layout_height="@dimen/home_drawer_menuitem_icon_size"
            android:layout_marginEnd="@dimen/spacing_3"
            android:src="@drawable/ic_person"
            android:tint="?colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_drawer_menuitem_profile"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_drawer_divider_size"
        android:background="@color/divider_color"
        />

    <LinearLayout
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/clickable_transparent_blue"
        android:gravity="center_vertical|start"
        android:padding="@dimen/spacing_3"
        tools:ignore="UseCompoundDrawables"
        >

        <ImageView
            android:layout_width="@dimen/home_drawer_menuitem_icon_size"
            android:layout_height="@dimen/home_drawer_menuitem_icon_size"
            android:layout_marginEnd="@dimen/spacing_3"
            android:src="@drawable/ic_signout"
            android:tint="?colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_drawer_menuitem_signout"
            />
    </LinearLayout>
</LinearLayout>